	* Addded SWITCHYARD_SETTINGS_ORGANIZATION and
	SWITCHYARD_SETTINGS_APPLICATION defines in 'sy/syconfig.h'.
	* Ported source database generation to Win32 in 'sy/syadv_server.cpp'
	* Ported source database reading to Win32 in 'sy/syadv_reader.cpp'
2015-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/syrouting.cpp' that broke saving of destination
	information to the routing database.
	* Changed SYD_SLOTS in 'tests/syd.h' to '4'.
2015-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Added 'FASM' tag to set of recognized tags when parsing 'SRC'
	commands in 'sy/sylwrp_server.cpp'.
2015-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Moved syd(8) from 'noinst' to 'sbin' in 'tests/Makefile.am'.
	* Modified to 'make rpm' target in 'Makefile.am' to use a home
	directory based RPM build tree.
2015-02-28 Fred Gleason <fredg@paravelsystems.com>
	* Moved syd(8) from 'sbin' to 'noinst' in 'tests/Makefile.am'.
	* Fixed a bug in 'sy/syrtp_server.cpp' that caused RTP subscriptions
	to not be made if no source slots were configured.
	* Added sycapture(8) in 'tests/sycapture.cpp' and 'test/sycapture.h'.
2015-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Refactored SyAdvServer' to transmit advertising updates correctly
	in 'sy/syadv_server.cpp' and 'sy/syadv_server.h'.
2015-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Added syplay(8) in 'tests/syplay.cpp' and 'test/syplay.h'.
2015-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out 'SyClock' in 'sy/syclock.cpp' and 'sy/syclock.h'.
2015-03-15 Fred Gleason <fredg@paravelsystems.com>
	* Implemented PLL algorithm in 'sy/syclock.cpp' and 'sy/syclock.h'.
2015-03-15 Fred Gleason <fredg@paravelsystems.com>
	* Added sytone(8) in 'tests/sytone.cpp' and 'test/sytone.h'.
2015-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyClock::sourceAddress()' method in 'sy/syclock.cpp' and
	'sy/syclock.h'.
	* Added a 'SyClock::sourceAddressChanged()' signal in 'sy/syclock.cpp'
	and 'sy/syclock.h'.